// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Animation present when initially visible 1`] = `
.c0 {
  -webkit-transition: visibility 500ms ease-out 0ms, opacity 500ms ease-out 0ms;
  transition: visibility 500ms ease-out 0ms, opacity 500ms ease-out 0ms;
  visibility: visible;
  opacity: 1;
}

<div
  className="c0"
  hidden={false}
/>
`;

exports[`Transition with hide on exit 1`] = `
.c0 {
  display: none;
  -webkit-transition: visibility 500ms ease-out 0ms, opacity 500ms ease-out 0ms;
  transition: visibility 500ms ease-out 0ms, opacity 500ms ease-out 0ms;
  visibility: hidden;
  opacity: 0;
}

<div
  className="c0"
  hidden={true}
/>
`;

exports[`Transition with hide on exit 2`] = `
.c0 {
  -webkit-transition: visibility 500ms ease-out 0ms, opacity 500ms ease-out 0ms;
  transition: visibility 500ms ease-out 0ms, opacity 500ms ease-out 0ms;
  visibility: visible;
  opacity: 1;
}

<div
  className="c0"
  hidden={false}
/>
`;

exports[`Transition with no enter animation 1`] = `
.c0 {
  visibility: visible;
  opacity: 1;
}

<div
  className="c0"
  hidden={false}
/>
`;

exports[`Transition with no enter animation 2`] = `
.c0 {
  -webkit-transition: visibility 500ms ease-out 0ms, opacity 500ms ease-out 0ms;
  transition: visibility 500ms ease-out 0ms, opacity 500ms ease-out 0ms;
  visibility: hidden;
  opacity: 0;
}

<div
  className="c0"
  hidden={false}
/>
`;

exports[`Transition with no exit animation 1`] = `
.c0 {
  -webkit-transition: visibility 500ms ease-out 0ms, opacity 500ms ease-out 0ms;
  transition: visibility 500ms ease-out 0ms, opacity 500ms ease-out 0ms;
  visibility: visible;
  opacity: 1;
}

<div
  className="c0"
  hidden={false}
/>
`;

exports[`Transition with no exit animation 2`] = `
.c0 {
  visibility: hidden;
  opacity: 0;
}

<div
  className="c0"
/>
`;

exports[`Transition with no initial enter animation 1`] = `
.c0 {
  -webkit-transition: visibility 500ms ease-out 0ms, opacity 500ms ease-out 0ms;
  transition: visibility 500ms ease-out 0ms, opacity 500ms ease-out 0ms;
  visibility: visible;
  opacity: 1;
}

<div
  className="c0"
  hidden={false}
/>
`;

exports[`Transition with no initial enter animation 2`] = `
.c0 {
  -webkit-transition: visibility 500ms ease-out 0ms, opacity 500ms ease-out 0ms;
  transition: visibility 500ms ease-out 0ms, opacity 500ms ease-out 0ms;
  visibility: hidden;
  opacity: 0;
}

<div
  className="c0"
  hidden={false}
/>
`;

exports[`Transition works when toggling visiblity 1`] = `
.c0 {
  -webkit-transition: visibility 500ms ease-out 0ms, opacity 500ms ease-out 0ms;
  transition: visibility 500ms ease-out 0ms, opacity 500ms ease-out 0ms;
  visibility: hidden;
  opacity: 0;
}

<div
  className="c0"
/>
`;

exports[`Transition works when toggling visiblity 2`] = `
.c0 {
  -webkit-transition: visibility 500ms ease-out 0ms, opacity 500ms ease-out 0ms;
  transition: visibility 500ms ease-out 0ms, opacity 500ms ease-out 0ms;
  visibility: visible;
  opacity: 1;
}

<div
  className="c0"
  hidden={false}
/>
`;

exports[`Transition works when toggling visiblity 3`] = `
.c0 {
  -webkit-transition: visibility 500ms ease-out 0ms, opacity 500ms ease-out 0ms;
  transition: visibility 500ms ease-out 0ms, opacity 500ms ease-out 0ms;
  visibility: hidden;
  opacity: 0;
}

<div
  className="c0"
  hidden={false}
/>
`;
